--- a/jsSeries/index.html
+++ b/jsSeries/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="hoisting.js"></script>
+    <script src="scopecheck.js"></script>
 </body>
 </html>
